@@ -13,6 +13,7 @@ Date: 2025-07-25
   Bugfixes:
     - Fixed working animation of greenhouse
     - Fixed pipe covers for incinerator
+    - Platium group metal concentrate is now made in chemical plant
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.24
 Date: 2025-07-18
